--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,28 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="navtree.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
-<style>
-    .datas{
-        display: none;
-    }
-</style>
+
     <title>ipl</title>
 </head>
 <body>
     <div class="main">
-        <div class="heading">
-            <h1>IPL DATA</h1>
-        </div>
+        <h1>IPL DATA</h1>
+    </div>
     <div class="data">
-    <div class="title">IPL</div>
-   <div class="nav-container"></div>
-   </div>
-
-
-
-
-</div>
+        <div class="title">IPL STATS</div>
+        <div class="nav-container"></div>
+        <div class="player-table"></div>
+    </div>
 </body>
 </html>
